--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MANGO_URL = "mongodb+srv://eldh4:HotTopics123@cluster0.f3rgc0t.mongodb.net/"
+MONGO_URL = "mongodb+srv://eldh4:HotTopics123@cluster0.f3rgc0t.mongodb.net/"
 JWT_SECRET = 'HotTopics123'
 PORT = 3001
